@@ -35,16 +35,16 @@ by lcdDaemon by using the following format below (<sp> stands for the white
 space character)
 
 .EX
-\fIscroll\fR<sp>\fIrownum\fR<sp>\fIclear\fR:\fImessage\fR
+\fIrownum\fR<sp>\fIscroll\fR<sp>\fIclear\fR:\fImessage\fR
 .EE
 
 where
 .TP
-\fIscroll\fR
-value can be 0 or 1. 1 turns on scrolling
-.TP
 \fIrownum\fR
 value can be 0 or 1 for 16x2 display or 0, 1, 2 or 3 for 20x4 display.
+.TP
+\fIscroll\fR
+value can be 0 or 1. 1 turns on scrolling
 .TP
 \fIclear\fR
 The following values are supported for \fIclear\fR
