@@ -23,7 +23,7 @@ depending on your system.
 named pipe (here <sp> stands for the white space character)
 
 .EX
-\fIscroll\fR<sp>\fIrownum\fR<sp>\fIclear\fR:\fImessage\fR
+\fIrownum\fR<sp>\fIscroll\fR<sp>\fIclear\fR:\fImessage\fR
 .EE
 
 where
